    * Removed (unimplemented) concept of caps for permissions
    * Added @requireClientProtocol decorator for server methods
    * Renamed usergroups to roles in the repository web user interface
      (CNY-1973)
    * Reworked server exceptions to have marshalling logic in the exception
      class instead of in a large if/elif block (CNY-747)
    * Call log now tracks cache misses (CNY-1843)

Changes in @NEW@:
  o Bug Fixes:
    * ccs2tar handles changesets with duplicate contents and hard links
      (CNY-1953)
    * An error in the way attributes of ServerProxy classes get
      marshaled has been fixed. (CNY-1956)

  o Server Changes
    * a bug which triggered an exception while migrating postgresql
      repositories has been fixed (CNY-1912)

Changes in 1.1.91:
  o Client Changes:
    * A new configuration option, "flavorPreferences", has been added.
      The client uses this list of flavors in trove selection.
      (CNY-1710)
    * Large files are now compressed on disk instead of in memory when
      creating rollbacks. (CNY-1896)
    * The Conary client API is now more careful with releasing open
      file descriptors. (CNY-1834)
    * The "migrate" mode has changed to overwrite changes made to
      files that are not yet owned by Conary, but already exist on the
      system, as well managed, non-configuration files that have
      changed. (CNY-1866)
    * When signals are received during updates, the journal is now
      rolled back before conary terminates. (CNY-1393)
    * A 'cvc checkout' of multiple projects uses far fewer repository
      calls now, and uses a single changeset.
    * The 'cvc update' and 'cvc diff' commands now accept a source
      version arguemnt without a source count. (CNY-1921)

  o Server Changes:

Changes in 1.1.31.4:
  o Server changes:
    * Setting "forceSSL" once again requires a HTTPS connection be
      used when authentication data is passed to an Apache based
      Conary Repository. (CNY-1880)